--- a/5_js.html
+++ b/5_js.html
@@ -44,7 +44,7 @@
 
         for (let i = 1; i <= 9; i++) {
             if(i%2==1){
-                console.log("*")
+                console.log("***")
             }
             
         }
